content/canigo-fwk-docs/documentacio-llibreries/canigo.integration.sarcat.pica/3.0.6/llistat-de-canvis.md
+++
date        = "2022-07-21"
title       = "Llistat de canvis"
description = "Llistat de canvis canigo.integration.sarcat.pica 3.0.6"
sections    = "canigo-fwk-docs"
weight		= 2
+++

## canigo.integration.sarcat.pica 3.0.6

- [Actualització client SARCAT PICA](/noticies/2022-07-21-CAN-actualitzacio-canigo-integration-sarcat-pica-3_0_6/)
   - S'afegeixen 4 atributs (tipusDocumentIdentificatiu, documentIdentificatiu, paisEmisor i observacions) a l'esquema
   `AltaAssentaments.xsd` i a les classes: `AssentamentEntradaInfo.java` i `AssentamentSortidaInfo.java`,
   que s'utilitzen com a paràmetres d'entrada de les operacions: `insertarAssentamentEntrada` i `insertarAssentamentSortida`

## canigo.integration.sarcat.pica 3.0.5

- [Actualització client PICA](/noticies/2022-05-23-CAN-actualitzacio-canigo-3_6_5/)
   - Actualització dels mòduls d'integració amb la PICA per a fer ús de l'última versió del client (v.1.10.0).

## canigo.integration.sarcat.pica 3.0.4

- [Resolució de vulnerabilitat Spring4Shell](/noticies/2022-04-13-CAN-actualitzacio-canigo-3_6_4/)
   - Actualització de tots els mòduls de Canigó per a actualitzar `org.springframework` de 5.3.9 a 5.3.18,
   `org.springframework.boot` de 2.5.4 a 2.5.12 i `spring.security` de 5.5.2 a 5.6.2

## canigo.integration.sarcat.pica 3.0.3

- [Resolució de vulnerabilitat Log4Shell](/noticies/2021-12-27-CAN-actualitzacio-canigo-3_4_9_3_6_3/)
   - Actualització de tots els mòduls de Canigó per a utilitzar la versió 2.17.0 de log4j

## canigo.integration.sarcat.pica 3.0.2

- [Resolució de vulnerabilitat Log4Shell](/noticies/2021-12-17-CAN-actualitzacio-canigo-3_4_8_3_6_2/)
   - Actualització de tots els mòduls de Canigó per a utilitzar la versió 2.16.0 de log4j

## canigo.integration.sarcat.pica 3.0.1

- [Resolució de vulnerabilitat Log4Shell](/noticies/2021-12-13-CAN-actualitzacio-canigo-3_4_7_3_6_1/)
   - Actualització de tots els mòduls de Canigó per a utilitzar la versió 2.15.0 de log4j

## canigo.integration.sarcat.pica 3.0.0

- [Actualització de tecnologies base](/noticies/2021-10-25-CAN-actualitzacio-canigo-3_6_0/)
   - Actualització a Java 11, Spring 5.3, Spring Boot 2.5
   - Actualització dels clients dels mòduls d'integració amb Serveis Web Soap
   - Actualització versió Swagger
   - Actualització versió dependències
   - Actualització versió plugins
